--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Cherry+Swash:wght@700&family=Merriweather+Sans:wght@500;600&family=Outfit&family=Poppins:wght@100&display=swap");
+
 * {
   box-sizing: border-box;
 }
 
 body {
+  background-color: #0c0317;
   max-width: 1280px;
   margin: 0 auto;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Cherry Swash", cursive;
+  font-family: "Merriweather Sans", sans-serif;
+  font-family: "Outfit", sans-serif;
+  font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
