--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,22 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+.navbar-container {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(2.5vw, 20vw));
+  justify-content: space-between;
+  justify-items: center;
+  align-items: center;
+}
+
+.navbar-submenu {
+  grid-column: 1 / -1;
+  justify-self: start;
+  width: 100%;
+  padding-top: 5vw;
+  padding-bottom: 5vw;
+}
+
 .dashboard-container {
   padding-left: 5vw;
   padding-right: 5vw;
@@ -114,5 +130,27 @@ body {
   height: 100%;
 }
 
-@media screen and (min-width: 640px) {
+@media screen and (min-width: 768px) {
+  div.navbar-container {
+    display: grid;
+    grid-template-columns: 1fr 8fr 1fr;
+    justify-content: stretch;
+    justify-items: center;
+    align-items: center;
+    gap: 0.5rem;
+  }
+
+  div.nav-logo {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+  }
+
+  div.navbar-submenu {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    display: flex;
+    height: 100%;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
 }
