--- a/src/index.css
+++ b/src/index.css
@@ -128,6 +128,8 @@ body {
   border-radius: 1vw;
   width: 100%;
   height: 100%;
+  text-align: center;
+  padding: 1vw;
 }
 
 @media screen and (min-width: 768px) {
