Fix: responsive DashboardPage

--- a/src/index.css
+++ b/src/index.css
@@ -13,9 +13,7 @@ html {
 body {
   color: white;
   background-color: #0c0e17;
-  max-width: 1280px;
-  margin: 0 auto;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .navbar-container {
@@ -34,29 +32,16 @@ body {
   padding-bottom: 5vw;
 }
 
-.dashboard-container {
-  padding-left: 5vw;
-  padding-right: 5vw;
-}
-
-.dashboard-jumbotron {
-  position: absolute;
-  left: 0;
-}
-
-.dashboard-jumbotron > img {
-  width: 100vw;
-  aspect-ratio: 10 / 3.5;
-  object-fit: cover;
-}
-
 .dashboard-content {
-  padding-top: 45vw;
+  max-width: 90%;
+  margin: 0 auto;
+  padding-top: 8vw;
 }
 
 .dashboard-content_title {
   display: grid;
   grid-template-columns: 30% 70%;
+  align-items: center;
 }
 
 .dashboard-content_title_text {
@@ -69,22 +54,22 @@ body {
   width: 100%;
   height: 6%;
   background-color: #394253;
-  align-self: center;
 }
 
 .dashboard-content_cards {
   padding-top: 10vw;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(10vw, 40vw));
-  justify-content: space-between;
-  row-gap: 10vw;
+  justify-content: space-evenly;
+  column-gap: 2vw;
+  row-gap: 6vw;
 }
 
 .dashboard-content_cards_card {
   width: 100%;
   aspect-ratio: 4 / 6;
   display: grid;
-  grid-template-rows: 60% 10% 10% 10% 10%;
+  grid-template-columns: 1fr;
   align-items: center;
 }
 
@@ -104,7 +89,6 @@ body {
   color: #6091b0;
   font-size: 2.5vw;
   font-weight: 600;
-  align-self: end;
 }
 
 .dashboard-content_cards_card_location {
@@ -117,10 +101,12 @@ body {
   color: white;
   font-size: 2.5vw;
   font-weight: 600;
-  align-self: start;
 }
 
 .dashboard-content_cards_card_buttonDetail {
+  display: grid;
+  justify-content: center;
+  align-items: center;
   color: white;
   font-size: 3vw;
   font-weight: bold;
@@ -128,8 +114,6 @@ body {
   border-radius: 1vw;
   width: 100%;
   height: 100%;
-  text-align: center;
-  padding: 1vw;
 }
 
 @media screen and (min-width: 768px) {
@@ -154,5 +138,40 @@ body {
     height: 100%;
     padding-top: 1rem;
     padding-bottom: 1rem;
+  }
+
+  .dashboard-content {
+    padding-top: 4rem;
+  }
+
+  .dashboard-content_title_text {
+    font-size: 2em;
+  }
+
+  .dashboard-content_cards {
+    padding-top: 2rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(5rem, 10rem));
+    justify-content: space-evenly;
+    gap: 2rem;
+  }
+
+  .dashboard-content_cards_card_price {
+    font-size: 0.9em;
+    align-self: end;
+  }
+
+  .dashboard-content_cards_card_location {
+    font-size: 0.9em;
+  }
+
+  .dashboard-content_cards_card_title {
+    font-size: 0.9em;
+    align-self: start;
+  }
+
+  .dashboard-content_cards_card_buttonDetail {
+    font-size: 0.9em;
+    border-radius: 0.2rem;
   }
 }
