--- a/src/index.css
+++ b/src/index.css
@@ -39,8 +39,8 @@ body {
 }
 
 .dashboard-content_title {
-  display: grid;
-  grid-template-columns: 30% 70%;
+  display: flex;
+  gap: 2%;
   align-items: center;
 }
 
@@ -50,9 +50,9 @@ body {
 }
 
 .dashboard-content_title_line {
-  grid-column: 2 / 3;
+  flex: 1 1 0%;
   width: 100%;
-  height: 6%;
+  height: 0.25vw;
   background-color: #394253;
 }
 
@@ -146,6 +146,10 @@ body {
 
   .dashboard-content_title_text {
     font-size: 2em;
+  }
+
+  .dashboard-content_title_line {
+    height: 0.1rem;
   }
 
   .dashboard-content_cards {
