--- a/src/index.css
+++ b/src/index.css
@@ -75,7 +75,7 @@ html body {
 
 .dashboard-content_cards_card_image {
   width: 100%;
-  height: 100%;
+  aspect-ratio: 1/1;
 }
 
 .dashboard-content_cards_card_image > img {
