--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ html {
 html body {
   color: white;
   background-color: #0c0e17;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .navbar-container {
